--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
 INFURA_SEPOLIA_API_KEY:
 SEPOLIA_CONTRACT_ADDRESS:
-SEPOLIA_CONTRACT_OWNER:
-SEPOLIA_CONTRACT_OWNER_PRIV_KEY:
+SEPOLIA_CONTRACT_OWNER_PRIVATE_KEY:
 
-LOCAL_NODE_URL:
-LOCAL_CONTRACT_ADDRESS:
-LOCAL_CONTRACT_OWNER:
-LOCAL_CONTRACT_OWNER_PRIV_KEY:
+LOCALHOST_NODE_URL:
+LOCALHOST_CONTRACT_ADDRESS:
+LOCALHOST_CONTRACT_OWNER_PRIVATE_KEY:
