--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon",
   },
   "repository": {
     "type": "git",
@@ -15,9 +15,16 @@
   "bugs": {
     "url": "https://github.com/keranskit/BookLibrarySDK/issues"
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  },
   "homepage": "https://github.com/keranskit/BookLibrarySDK#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
